--- a/package.json
+++ b/package.json
@@ -9,11 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@floating-ui/dom": "^1.7.1",
-    "@gsap/react": "^2.1.2",
-    "@heroicons/react": "^2.2.0",
-    "@preline/dropdown": "^3.1.0",
-    "@preline/stepper": "^3.1.0",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
@@ -22,13 +17,8 @@
     "@rainbow-me/rainbowkit": "2.2.7",
     "@reown/appkit": "^1.7.9",
     "@reown/appkit-adapter-wagmi": "^1.7.9",
-    "@solana/pay": "^0.2.5",
-    "@solana/web3.js": "^1.98.0",
     "@tanstack/react-query": "5.55.3",
     "@wagmi/core": "^2.17.3",
-    "animejs": "^4.0.2",
-    "axios": "^1.8.3",
-    "bignumber.js": "^9.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "ethers": "^6.14.4",
@@ -37,23 +27,19 @@
     "lenis": "^1.3.3",
     "lucide-react": "^0.479.0",
     "motion": "^12.9.4",
-    "motion-plus": "^0.1.6",
     "next": "15.2.2",
-    "nodemailer": "^7.0.3",
     "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-fittext": "^1.0.0",
     "react-icons": "^5.5.0",
     "react-textfit": "^1.1.1",
     "recharts": "^2.15.3",
     "shadcn": "2.5.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "viem": "2.29.2",
+    "viem": "2.31.7",
     "wagmi": "2.15.6",
-    "web3": "^4.16.0",
-    "zustand": "^5.0.5"
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
